WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310898
Ignore outline-width when outline-style is auto
https://bugs.webkit.org/show_bug.cgi?id=310898
Summary
Ignore outline-width when outline-style is auto
Anne van Kesteren
Reported
2026-03-27 07:42:43 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Anne van Kesteren
Comment 1
2026-03-27 07:44:30 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61497
EWS
Comment 2
2026-03-27 23:26:34 PDT
Committed
310145@main
(b474f3f8083e): <
https://commits.webkit.org/310145@main
> Reviewed commits have been landed. Closing PR #61497 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-03-27 23:27:12 PDT
<
rdar://problem/173567890
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug