Ignore outline-width when outline-style is auto https://bugs.webkit.org/show_bug.cgi?id=310898

Reviewed by Tim Nguyen.

Having refactored html.css in 309812@main to no longer set
outline-width, aligning with the standard here is much more realistic
and will give us a tiny web-platform-tests win.

svg/custom/focus-ring.svg had to be adjusted slightly now we ignore
outline-width for auto and to make sure the test continues working we
add support for outline-offset to SVG.

Adwaita uses a width of 2px which originally would often give it a 1px
gap as the outline-width was often 3px (default value). Now that is no
longer the case there is some slight bleeding of the outline into the
content for the various caret tests that zoom in a lot which is why
they appear regressed. It doesn't seem like it should be a problem in
practice, but there is a bug filed for them to look into outline again.

Canonical link: https://commits.webkit.org/310145@main